# stainless_script

./: .gitignore  Cargo.toml  LICENSE  README.md
example_programs/: hello_world.bin.ssc  hello_world.json.ssc  hello_world.ron.ssc
src/: class.rs  lib.rs  module.rs  node.rs  object.rs  program.rs  socket.rs  stdlib.rs
src/stdlib/: any_type.rs  array_type.rs  bool_node.rs  bool_type.rs  dict_type.rs  flow_nodes.rs  if_node.rs  mod.rs  nop_node.rs  number_type.rs  print_node.rs  string_type.rs  subroutine.rs  variable_node.rs
stainless_script_derive/: Cargo.toml
stainless_script_derive/src/: lib.rs
