[package]
name = "stainless_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["format-json", "format-bincode"]
format-json = ["serde_json"]
format-bincode = ["bincode"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
thiserror = "1.0"
ron = "0.8"

[[bin]]
name = "ssce"
