[package]
name = "stainless_script"
version = "0.1.0"
edition = "2021"
description = "Visual node-based programming language"
license = "BSD-3-Clause"
repository = "https://github.com/JohnTheCoolingFan/stainless_script"
categories = ["compilers"]
documentation = "https://docs.rs/stainless_script"
authors = ["Jonh The Cooling Fan <ivan8215145640@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["executor-binary", "format-json", "format-bincode"]
executor-binary = ["clap", "glob"]
format-json = ["serde_json", "executor-binary"]
format-bincode = ["bincode", "executor-binary"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
thiserror = "1.0"
ron = "0.8"
clap = { version = "4.0", optional = true, features = ["derive"] }
glob = { version = "0.3", optional = true }

[[bin]]
name = "ssce"
required-features = ["executor-binary"]
